implemented all CRUD with oapi-codegen
